# Guides-for-Agentic-Development

./: README.md
guides/adaptive-learning-with-crewai-xysq/: .env.example  .gitignore  README.md  app.py  pyproject.toml
guides/adaptive-learning-with-crewai-xysq/data/: topics.json
guides/adaptive-learning-with-crewai-xysq/src/xysq_crewai/: crew.py  main.py  memory_tools.py  topics.py
guides/adaptive-learning-with-crewai-xysq/src/xysq_crewai/config/: agents.yaml  assessment_tasks.yaml  learning_tasks.yaml  tasks.yaml
guides/langchain-healthcare/: .env.example  README.md  agents.py  demo.py  memory_tools.py  requirements.txt  ui.py
guides/langchain-healthcare/prompts/: doctor.txt  intake.txt  pharm.txt
